--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <!-- OTHER -->
     <div class="bg-other" id="otherBg">
-      <img src="photos/me angry.jpg" />
+      <img src="photos/angry.jpg" />
     </div>
 
     <!-- AUDIO -->
@@ -208,3 +208,4 @@
     </script>
   </body>
 </html>
+
